; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_bps_read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_patch.c_bps_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bps_data = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bps_data*)* @bps_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bps_read(%struct.bps_data* %0) #0 {
  %2 = alloca %struct.bps_data*, align 8
  %3 = alloca i32, align 4
  store %struct.bps_data* %0, %struct.bps_data** %2, align 8
  %4 = load %struct.bps_data*, %struct.bps_data** %2, align 8
  %5 = getelementptr inbounds %struct.bps_data, %struct.bps_data* %4, i32 0, i32 2
  %6 = load i32*, i32** %5, align 8
  %7 = load %struct.bps_data*, %struct.bps_data** %2, align 8
  %8 = getelementptr inbounds %struct.bps_data, %struct.bps_data* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* %8, align 4
  %11 = sext i32 %9 to i64
  %12 = getelementptr inbounds i32, i32* %6, i64 %11
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %3, align 4
  %14 = load %struct.bps_data*, %struct.bps_data** %2, align 8
  %15 = getelementptr inbounds %struct.bps_data, %struct.bps_data* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = xor i32 %16, -1
  %18 = call i32 @encoding_crc32(i32 %17, i32* %3, i32 1)
  %19 = xor i32 %18, -1
  %20 = load %struct.bps_data*, %struct.bps_data** %2, align 8
  %21 = getelementptr inbounds %struct.bps_data, %struct.bps_data* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @encoding_crc32(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
